[STR-2146] refactoring; swagger update
